--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="img/pikachu_favicon.png" rel="shortcut icon" />
+    <!-- <link rel="stylesheet" type="text/scss" href="./styles.scss" /> -->
     <title>Pokedex with React</title>
   </head>
   <body>
