--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="img/pikachu_favicon.png" rel="shortcut icon" />
-    <!-- <link rel="stylesheet" type="text/scss" href="./styles.scss" /> -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;500;600&family=Luckiest+Guy&family=Sigmar&display=swap"
+      rel="stylesheet"
+    />
     <title>Pokedex with React</title>
   </head>
   <body>
